# textmine

./: .gitignore  README.md  biases.json  pyproject.toml  webscrape.py
.github/workflows/: python-package.yml
docs/: api_hierarchy.puml  apis.puml  class-diagram.puml
tests/: api_test.py  webscrape_test.py
textmine/: api.py  clean_comments.py  create_word_cloud.py  music_video_comments.py  parse_json.py  test.html  webscrape.py
textmine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
textmine/clean/: clean_comments.py
textmine/collect/: yt_comments.py
textmine/collect/news/: __init__.py  api.py  webscrape.py
textmine/utils/: constants.py  custom_list_utils.py
